# lcd-data

./: .gitattributes  .gitignore  LICENSE  MANIFEST.in  README.md  environment.yml  pyproject.toml  upload2anaconda.sh
.github/workflows/: ci.yml
src/lcd_data/: __init__.py  build_lcd_dataset.py  ncei.py  region_codes.py  rto_iso.py  saturation.py  stations.py
src/lcd_data/data/CensusBureau/: README.txt
src/lcd_data/data/CensusBureau/US_states/: tl_2024_us_state.dbf  tl_2024_us_state.shp  tl_2024_us_state.shx
src/lcd_data/data/EIA/: RTO_ISO_regions.README  RTO_ISO_regions.geojson
tests/: test_test.py
