[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lcd-data"
version = "0.0.0"
description = "Short description"
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [{ name = "Jan Kazil" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "mypy>=1.11",
  "ruff>=0.5",
  "pre-commit>=3.7",
]

[tool.ruff]
line-length = 128
target-version = "py313"
extend-exclude = ["dist", "build"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "SIM108"]

[tool.ruff.format]
quote-style = "preserve"

#
# MyPy is disabled because static analysis cannot account for all
# dynamic runtime behaviors, mypy may report false positives which
# do no reflect actual runtime issues.
#
#[tool.mypy]
#python_version = "3.13"
#warn_unused_configs = true
#disallow_untyped_defs = true
#disallow_incomplete_defs = true
#no_implicit_optional = true
#check_untyped_defs = true
#strict_optional = true
#pretty = true
#namespace_packages = true
#mypy_path = "src"
#files = ["src/lcd_data", "scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
